[package]
name = "bevy_sky"
version = "0.1.0"
authors = ["Zhixing Zhang <me@neoto.xin>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4"

[patch.crates-io]
bevy = { git = "https://github.com/Neo-Zhixing/bevy.git", branch = "camera_transform_matrix" }
